# meson-project-template

./: .clangd  README.md  meson.build
src/: main.c  meson.build  romspec.toml
